# mandelbrodt

./: LICENSE  README.md  koch.ipynb  main.ipynb  pyproject.toml  setup.sh  sierpinski.ipynb
src/mandelbrot/: __init__.py  act.py  koch.ipynb  koch.py  plot.py  test_train.py  train.py
src/mandelbrot/results/act_small/: constants.txt  model_weights.pth
