[project]
name = "mandelbrot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Armaan Abraham", email = "armaanabraham@g.ucla.edu" }
]
dependencies = [
    "numpy~=2.1.0",
    "torch~=2.4.0",
    "matplotlib~=3.9.2",
    "tqdm~=4.66.5",
    "seaborn~=0.13.2",
    "ipykernel~=6.29.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mandelbrot"]
